WEB-7865: fix bug: Alert popup overlaps the Navigation Bar on iPhone 5

--- a/styles/core-rtl.css
+++ b/styles/core-rtl.css
@@ -42,6 +42,22 @@ body {
   background-position-y: top;
   background-size: cover;
   background-repeat: no-repeat; }
+  @media (max-width: 480px) {
+    body #MW_Position1 {
+      min-height: 50px;
+      text-align: center; }
+    body #WX_WindowShade {
+      min-height: 0; } }
+  @media (min-width: 481px) {
+    body #WX_WindowShade {
+      min-height: 90px;
+      text-align: center; }
+    body #MW_Position1 {
+      min-height: 0; } }
+
+.wx-gptADS {
+  text-align: center;
+  margin-bottom: 10px; }
 
 .header {
   width: 100%;
@@ -116,17 +132,17 @@ body {
 .btn-mobile {
   top: 0;
   left: 0;
-  width: 36px;
+  width: 43px;
   height: 45px;
   padding: 6px;
-  position: absolute;
+  position: relative;
   background: transparent;
   border: none;
   outline: none;
   cursor: pointer; }
 
 .search-open-btn {
-  left: 35px;
+  left: 43px;
   text-align: center;
   background-color: transparent;
   color: #cccccc;
@@ -223,7 +239,12 @@ a {
 
 #area-value .wx-icon-arrow-right {
   display: none;
-  font-weight: bold; }
+  font-weight: bold;
+}
+
+.main-div {
+  min-height: 91px;
+}
 
 .main-nav {
   background-color: black;
@@ -498,9 +519,11 @@ footer {
 .page-card {
   position: relative;
   display: block;
-  width: 100%; }
+  width: 100%;
+  min-height: 600px; }
   .page-card.slide-out {
     position: relative;
+    display: none;
     -webkit-appearance: none;
        -moz-appearance: none;
             appearance: none;
