--- a/styles/core.css
+++ b/styles/core.css
@@ -242,6 +242,10 @@ a {
   display: none;
   font-weight: bold; }
 
+.main-div {
+  min-height: 91px;
+}
+
 .main-nav {
   background-color: black;
   height: 100%;
